# CSV-parser-API

./: .env example  LICENSE  README.md  pyproject.toml
src/backend/: __init__.py  asgi.py  config.py  dependencies.py  exceptions.py  logger.py  main.py
src/backend/core/: csv_parser.py  dependencies.py  excel_parser.py  factory.py
src/backend/routers/: format.py  health.py  root.py  supported_formats.py  upload.py
src/backend/services/: csv_parser.py  excel_parser.py  factory.py
